2019-06-11 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/ctype.h,
	  device/include/pic14/stdlib.h:
	  Work around some pic14 inlining issue.
	* sdcc/aclocal.m4,
	  sdcc/config.guess,
	  sdcc/config.sub,
	  sdcc/device/lib/pic14/install-sh,
	  sdcc/device/lib/pic14/libc/Makefile.am,
	  sdcc/device/lib/pic14/libc/Makefile.in,
	  sdcc/device/lib/pic14/libm/Makefile.am,
	  sdcc/device/lib/pic14/libm/Makefile.in,
	  sdcc/device/lib/pic14/libsdcc/enhanced/Makefile.am,
	  sdcc/device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  sdcc/device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.am,
	  sdcc/device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  sdcc/device/lib/pic14/libsdcc/regular/Makefile.am,
	  sdcc/device/lib/pic14/libsdcc/regular/Makefile.in,
	  sdcc/device/lib/pic14/missing,
	  sdcc/install-sh,
	  sdcc/sim/ucsim/ddconfig_in.h,
	  sdcc/support/sdbinutils/bfd/doc/bfdver.texi:
	  Fix pic14 library out-of-tree build.
	* device/lib/pic14/configure.ac,
	  device/lib/pic14/configure:
	  Disable default build of extra libary flavors.

2019-06-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/pdk/gen.c,
	  src/pdk/peep.c,
	  src/pdk/peeph.def:
	  pdk peephole improvements.

2019-06-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/peep.h,
	  src/pdk/peep.c,	
	  src/pdk/peeph.def:
	  notUsed() and notUsedFrom().
	* src/stm8/peep.c,
	  src/z80/peep.c:
	  Fixes for notUsedFrom().

2019-06-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/wchar.h,
	  device/lib/mbrtowc.c,
	  device/lib/mbtowc.c,
	  device/lib/wctomb.c,
	  support/regression/tests/constantRange.c,
	  support/regression/tests/driverstruct.c,
	  support/regression/tests/float.c,
	  support/regression/tests/nullstring.c,
	  support/regression/tests/snprintf.c:
	  Library and test improvements, from patch by Gonzalo Pérez de Olaguer Córdoba.
	* src/pic14/glue.c,
	  src/pic14/main.c: